//------------------------------------------------------------------------------
// <auto-generated>
//     This code was generated from a template.
//
//     Manual changes to this file may cause unexpected behavior in your application.
//     Manual changes to this file will be overwritten if the code is regenerated.
// </auto-generated>
//------------------------------------------------------------------------------

namespace DriveCareCore.Data.BD
{
    using System;
    using System.Collections.Generic;
    
    public partial class Task
    {
        [System.Diagnostics.CodeAnalysis.SuppressMessage("Microsoft.Usage", "CA2214:DoNotCallOverridableMethodsInConstructors")]
        public Task()
        {
            this.TaskPartLines = new HashSet<TaskPartLine>();
            this.TaskPurchaseRequests = new HashSet<TaskPurchaseRequest>();
            this.TaskPurchaseRequests1 = new HashSet<TaskPurchaseRequest>();
            this.TaskServiceLines = new HashSet<TaskServiceLine>();
            this.ServiceDocuments = new HashSet<ServiceDocument>();
        }
    
        public System.Guid RowId { get; set; }
        public string Title { get; set; }
        public string Description { get; set; }
        public System.Guid EmployeeId { get; set; }
        public System.Guid StatusId { get; set; }
        public System.DateTime CreatedAt { get; set; }
        public Nullable<System.DateTime> StartDate { get; set; }
        public Nullable<System.DateTime> EndDate { get; set; }
        public Nullable<System.DateTime> Deadline { get; set; }
        public bool IsCompleted { get; set; }
        public Nullable<double> WorkHours { get; set; }
        public string ReportText { get; set; }
        public Nullable<System.Guid> ClientUserId { get; set; }
        public Nullable<System.Guid> CarId { get; set; }
        public Nullable<System.Guid> DocumentId { get; set; }
    
        public virtual Car Car { get; set; }
        public virtual Employee Employee { get; set; }
        public virtual Status Status { get; set; }
        [System.Diagnostics.CodeAnalysis.SuppressMessage("Microsoft.Usage", "CA2227:CollectionPropertiesShouldBeReadOnly")]
        public virtual ICollection<TaskPartLine> TaskPartLines { get; set; }
        [System.Diagnostics.CodeAnalysis.SuppressMessage("Microsoft.Usage", "CA2227:CollectionPropertiesShouldBeReadOnly")]
        public virtual ICollection<TaskPurchaseRequest> TaskPurchaseRequests { get; set; }
        [System.Diagnostics.CodeAnalysis.SuppressMessage("Microsoft.Usage", "CA2227:CollectionPropertiesShouldBeReadOnly")]
        public virtual ICollection<TaskPurchaseRequest> TaskPurchaseRequests1 { get; set; }
        public virtual User User { get; set; }
        [System.Diagnostics.CodeAnalysis.SuppressMessage("Microsoft.Usage", "CA2227:CollectionPropertiesShouldBeReadOnly")]
        public virtual ICollection<TaskServiceLine> TaskServiceLines { get; set; }
        [System.Diagnostics.CodeAnalysis.SuppressMessage("Microsoft.Usage", "CA2227:CollectionPropertiesShouldBeReadOnly")]
        public virtual ICollection<ServiceDocument> ServiceDocuments { get; set; }
    }
}
