//------------------------------------------------------------------------------
// <auto-generated>
//     This code was generated from a template.
//
//     Manual changes to this file may cause unexpected behavior in your application.
//     Manual changes to this file will be overwritten if the code is regenerated.
// </auto-generated>
//------------------------------------------------------------------------------

namespace DriveCareCore.Data.BD
{
    using System;
    using System.Collections.Generic;
    
    public partial class TaskPurchaseRequest
    {
        [System.Diagnostics.CodeAnalysis.SuppressMessage("Microsoft.Usage", "CA2214:DoNotCallOverridableMethodsInConstructors")]
        public TaskPurchaseRequest()
        {
            this.TaskPurchaseRequestLines = new HashSet<TaskPurchaseRequestLine>();
        }
    
        public System.Guid RowId { get; set; }
        public System.Guid SourceTaskId { get; set; }
        public System.Guid PurchaseTaskId { get; set; }
        public System.Guid RequestedByEmployeeId { get; set; }
        public System.Guid PurchaserEmployeeId { get; set; }
        public bool IsFulfilled { get; set; }
        public System.DateTime CreatedAt { get; set; }
    
        public virtual Employee Employee { get; set; }
        public virtual Employee Employee1 { get; set; }
        [System.Diagnostics.CodeAnalysis.SuppressMessage("Microsoft.Usage", "CA2227:CollectionPropertiesShouldBeReadOnly")]
        public virtual ICollection<TaskPurchaseRequestLine> TaskPurchaseRequestLines { get; set; }
        public virtual Task Task { get; set; }
        public virtual Task Task1 { get; set; }
    }
}
