//------------------------------------------------------------------------------
// <auto-generated>
//     This code was generated from a template.
//
//     Manual changes to this file may cause unexpected behavior in your application.
//     Manual changes to this file will be overwritten if the code is regenerated.
// </auto-generated>
//------------------------------------------------------------------------------

namespace DriveCareCore.Data.BD
{
    using System;
    using System.Collections.Generic;
    
    public partial class TaskPurchaseRequestLine
    {
        public System.Guid RowId { get; set; }
        public System.Guid RequestId { get; set; }
        public Nullable<System.Guid> WorkshopPartId { get; set; }
        public string PartName { get; set; }
        public decimal Quantity { get; set; }
        public string UnitName { get; set; }
        public decimal UnitPrice { get; set; }
        public int SortOrder { get; set; }
    
        public virtual TaskPurchaseRequest TaskPurchaseRequest { get; set; }
    }
}
