@startuml ER_Part06_Workshop_Tasks
title Часть 6. Работа мастерской (задачи и документы)
hide circle
skinparam linetype ortho
skinparam shadowing false
top to bottom direction

entity "Workshops" {
  RowId *
  Name
  CompanyId
  AddressId
  Description
  BusinessTypeId
}

entity "Employees" {
  RowId *
  FirstName
  LastName
  MidName
  Login
  Password
  Email
  Phone
  BirthDate
  HireDate
  IsActive
  Description
  WorkshopId
}

entity "Users" {
  RowId *
  Login
  Password
  Description
  Email
  BirthDate
  Phone
  CreatedAt
}

entity "Cars" {
  RowId *
  ModelId
  CarTypeId
  FuelTypeId
  Year
  Description
  Vin
  PlateNumber
}

entity "Statuses" {
  RowId *
  Name
  Description
}

entity "Tasks" {
  RowId *
  Title
  Description
  EmployeeId
  StatusId
  CreatedAt
  StartDate
  EndDate
  Deadline
  IsCompleted
  WorkHours
  ReportText
  ClientUserId
  CarId
  DocumentId
}

entity "TaskServiceLines" {
  RowId *
  TaskId
  WorkshopServiceId
  ServiceName
  Quantity
  UnitName
  UnitPrice
  DiscountPercent
  LineAmount
  SortOrder
}

entity "TaskPartLines" {
  RowId *
  TaskId
  PartName
  Quantity
  UnitName
  UnitPrice
  LineAmount
  SortOrder
  WorkshopPartId
}

entity "TaskPurchaseRequests" {
  RowId *
  SourceTaskId
  PurchaseTaskId
  RequestedByEmployeeId
  PurchaserEmployeeId
  IsFulfilled
  CreatedAt
}

entity "TaskPurchaseRequestLines" {
  RowId *
  RequestId
  WorkshopPartId
  PartName
  Quantity
  UnitName
  UnitPrice
  SortOrder
}

entity "WorkshopServices" {
  RowId *
  WorkshopId
  Name
  Description
  Price
  UnitName
  IsActive
  SortOrder
  CreatedAt
  UnitId
}

entity "WorkshopParts" {
  RowId *
  WorkshopId
  Name
  Article
  Description
  Price
  UnitName
  QuantityOnHand
  Category
  IsActive
  CreatedAt
}

entity "WorkshopServiceUnits" {
  RowId *
  WorkshopId
  Name
  IsActive
  CreatedAt
}

entity "ServiceDocuments" {
  RowId *
  RootTaskId
  RepairHistoryId
  WorkshopId
  CarId
  ClientUserId
  Title
  ClientName
  ClientPhone
  ClientEmail
  VisitReason
  SpecialNotes
  ServiceKind
  ReportText
  Status
  CreatedAt
  CompletedAt
}

entity "ServiceDocumentServiceLines" {
  RowId *
  DocumentId
  WorkshopServiceId
  ServiceName
  Quantity
  UnitName
  UnitPrice
  DiscountPercent
  LineAmount
  SortOrder
}

entity "ServiceDocumentPartLines" {
  RowId *
  DocumentId
  WorkshopPartId
  PartName
  Quantity
  UnitName
  UnitPrice
  LineAmount
  SortOrder
}

entity "RepairHistory" {
  RowId *
  CarId
  EmployeeId
  Title
  Description
  RepairDate
  EndDate
  Mileage
  Cost
  StatusId
  CreatedAt
  CategoryId
}

Employees }o--|| Workshops : WorkshopId
Tasks }o--|| Statuses : StatusId
Tasks }o--|| Employees : EmployeeId
Tasks }o--|| Users : ClientUserId
Tasks }o--|| Cars : CarId
TaskServiceLines }o--|| Tasks : TaskId
TaskPartLines }o--|| Tasks : TaskId
TaskPurchaseRequests }o--|| Employees : PurchaserEmployeeId
TaskPurchaseRequests }o--|| Employees : RequestedByEmployeeId
TaskPurchaseRequests }o--|| Tasks : SourceTaskId
TaskPurchaseRequests }o--|| Tasks : PurchaseTaskId
TaskPurchaseRequestLines }o--|| TaskPurchaseRequests : RequestId
WorkshopServices }o--|| Workshops : WorkshopId
WorkshopServices }o--|| WorkshopServiceUnits : UnitId
WorkshopParts }o--|| Workshops : WorkshopId
WorkshopServiceUnits }o--|| Workshops : WorkshopId
ServiceDocuments }o--|| RepairHistory : RepairHistoryId
ServiceDocuments }o--|| Tasks : RootTaskId
ServiceDocuments }o--|| Workshops : WorkshopId
ServiceDocuments }o--|| Cars : CarId
ServiceDocuments }o--|| Users : ClientUserId
ServiceDocumentServiceLines }o--|| ServiceDocuments : DocumentId
ServiceDocumentServiceLines }o--|| WorkshopServices : WorkshopServiceId
ServiceDocumentPartLines }o--|| ServiceDocuments : DocumentId
ServiceDocumentPartLines }o--|| WorkshopParts : WorkshopPartId
RepairHistory }o--|| Statuses : StatusId
RepairHistory }o--|| Employees : EmployeeId
RepairHistory }o--|| Cars : CarId
@enduml
